--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,46 @@
 body {
   text-align: center;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 16px;
+}
+
+h1 {
+  font-family: 'Cinzel', serif;
+  margin-top: 0;
+  font-size: 70px;
+}
+
+.header {
+  background: url(../img/ron-largett-jr.jpg) no-repeat 0px -100px;
+  background-size: cover;
+  background-attachment: fixed;
+  width: 100%;
+  height: 400px;
+  opacity: .5;
+  position: relative;
+  z-index: 0;
+  border-bottom: 1px solid #333;
+}
+
+.portrait {
+  position: relative;
+  z-index: 1;
+  border: 10px solid #fff;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  display: inline-block;
+  background: #333 url("../img/ron-largett-jr.jpg") no-repeat -140px -30px;
+  background-size: 600px;
+  margin-top: -100px;
+  box-shadow: 0 -1px 1px #888;
+}
+
+.portfolio {
+  background-color: #fff;
+  position: relative;
+  z-index: 5;
 }
 
 .portfolio--thumb {
@@ -35,6 +76,19 @@ body {
 
 .portfolio--caption--content small {
   display: block;
+}
+
+.contact {
+  background-color: #aaa;
+  position: relative;
+  height: 307px;
+}
+
+.contact--form {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
