--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@ h1 {
   font-size: 70px;
 }
 
+.wrapper {
+  background-color: #fff;
+  position: relative;
+  z-index: 5;
+}
+
 .header {
   background: url(../img/ron-largett-jr.jpg) no-repeat 0px -100px;
   background-size: cover;
@@ -35,12 +41,6 @@ h1 {
   background-size: 600px;
   margin-top: -100px;
   box-shadow: 0 -1px 1px #888;
-}
-
-.portfolio {
-  background-color: #fff;
-  position: relative;
-  z-index: 5;
 }
 
 .portfolio--thumb {
@@ -79,9 +79,10 @@ h1 {
 }
 
 .contact {
-  background-color: #aaa;
+  background-color: #ccc;
   position: relative;
   height: 307px;
+  padding: 0 20px;
 }
 
 .contact--form {
