--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,6 +9,11 @@ h1{
     margin-top: 0;
     font-size: 70px;
 }
+.wrapper{
+    background-color: #fff;
+    position: relative;
+    z-index: 5;
+}
 .header{
     background: url(../img/ron-largett-jr.jpg) no-repeat 0px -100px;
     background-size: cover;
@@ -33,11 +38,6 @@ h1{
     background-size: 600px;
     margin-top: -100px;
     box-shadow: 0 -1px 1px #888;
-}
-.portfolio{
-    background-color: #fff;
-    position: relative;
-    z-index: 5;
 }
 .portfolio--thumb {
     margin: 0 0 20px 0;
@@ -72,9 +72,10 @@ h1{
 }
 
 .contact{
-    background-color: #aaa;
+    background-color: #ccc;
     position: relative;
     height: 307px;
+    padding: 0 20px;
 }
 .contact--form {
     position: fixed;
