--- a/css/styles.css
+++ b/css/styles.css
@@ -17,30 +17,45 @@ h1 {
 }
 
 .header {
-  background: url(../img/ron-largett-jr.jpg) no-repeat 0px -100px;
-  background-size: cover;
-  background-attachment: fixed;
-  width: 100%;
-  height: 400px;
-  opacity: .5;
-  position: relative;
-  z-index: 0;
-  border-bottom: 1px solid #333;
+  display: none;
+}
+
+@media all and (min-width: 480px) {
+  .header {
+    background: url(../img/ron-largett-jr.jpg) no-repeat 0px -100px;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 100%;
+    height: 400px;
+    opacity: .5;
+    position: relative;
+    z-index: 0;
+    border-bottom: 1px solid #333;
+    display: block;
+  }
 }
 
 .portrait {
   position: relative;
   z-index: 1;
   border: 10px solid #fff;
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   overflow: hidden;
   border-radius: 50%;
   display: inline-block;
   background: #333 url("../img/ron-largett-jr.jpg") no-repeat -140px -30px;
-  background-size: 600px;
-  margin-top: -100px;
-  box-shadow: 0 -1px 1px #888;
+  background-size: 800px;
+}
+
+@media all and (min-width: 480px) {
+  .portrait {
+    margin-top: -100px;
+    box-shadow: 0 -1px 1px #888;
+    width: 200px;
+    height: 200px;
+    background-size: 600px;
+  }
 }
 
 .portfolio--thumb {
