updated modal and mobile styles

--- a/scss/bootstrap/_close.scss
+++ b/scss/bootstrap/_close.scss
@@ -5,9 +5,9 @@
 
 .close {
   float: right;
-  font-size: ($font-size-base * 1.5);
+  font-size: ($font-size-base * 5.5);
   font-weight: $close-font-weight;
-  line-height: 1;
+  line-height: .5;
   color: $close-color;
   text-shadow: $close-text-shadow;
   @include opacity(.2);
