--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,13 @@ body {
 h1 {
   font-family: 'Cinzel', serif;
   margin-top: 0;
-  font-size: 70px;
+  font-size: 20vw;
+}
+
+@media all and (min-width: 480px) {
+  h1 {
+    font-size: 4.375em;
+  }
 }
 
 .wrapper {
@@ -39,23 +45,29 @@ h1 {
   position: relative;
   z-index: 1;
   border: 10px solid #fff;
-  width: 400px;
-  height: 400px;
+  width: 200px;
+  height: 200px;
   overflow: hidden;
   border-radius: 50%;
   display: inline-block;
-  background: #333 url("../img/ron-largett-jr.jpg") no-repeat -140px -30px;
-  background-size: 800px;
+  background-color: #333;
+  background-image: url("../img/ron-largett-jr.jpg");
+  background-repeat: no-repeat;
+  background-position: -125px -30px;
+  background-size: 400px;
 }
 
 @media all and (min-width: 480px) {
   .portrait {
     margin-top: -100px;
     box-shadow: 0 -1px 1px #888;
-    width: 200px;
-    height: 200px;
+    background-position: -140px -30px;
     background-size: 600px;
   }
+}
+
+.portfolio {
+  border-bottom: 1px solid #aaa;
 }
 
 .portfolio--thumb {
@@ -89,8 +101,8 @@ h1 {
   color: #fff;
 }
 
-.portfolio--caption--content small {
-  display: block;
+.portfolio--caption--content h3 {
+  margin: 0;
 }
 
 .contact {
