--- a/scss/bootstrap/_modals.scss
+++ b/scss/bootstrap/_modals.scss
@@ -38,23 +38,24 @@
 .modal-open .modal {
   overflow-x: hidden;
   overflow-y: auto;
+  padding: 0 !important;
 }
 
 // Shell div to position the modal with bottom padding
 .modal-dialog {
   position: relative;
   width: auto;
-  margin: 10px;
+  margin: 0;
 }
 
 // Actual modal
 .modal-content {
   position: relative;
   background-color: $modal-content-bg;
-  border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
-  border: 1px solid $modal-content-border-color;
-  border-radius: $border-radius-large;
-  @include box-shadow(0 3px 9px rgba(0,0,0,.5));
+  // border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
+  // border: 1px solid $modal-content-border-color;
+  // border-radius: $border-radius-large;
+  // @include box-shadow(0 3px 9px rgba(0,0,0,.5));
   background-clip: padding-box;
   // Remove focus outline from opened modal
   outline: 0;
@@ -83,7 +84,7 @@
 }
 // Close icon
 .modal-header .close {
-  margin-top: -2px;
+  margin-top: -3px;
 }
 
 // Title text within header
@@ -96,7 +97,7 @@
 // Where all modal content resides (sibling of .modal-header and .modal-footer)
 .modal-body {
   position: relative;
-  padding: $modal-inner-padding;
+  // padding: $modal-inner-padding;
 }
 
 // Footer (for actions)
@@ -130,21 +131,3 @@
   overflow: scroll;
 }
 
-// Scale up the modal
-@media (min-width: $screen-sm-min) {
-  // Automatically set modal's width for larger viewports
-  .modal-dialog {
-    width: $modal-md;
-    margin: 30px auto;
-  }
-  .modal-content {
-    @include box-shadow(0 5px 15px rgba(0,0,0,.5));
-  }
-
-  // Modal sizes
-  .modal-sm { width: $modal-sm; }
-}
-
-@media (min-width: $screen-md-min) {
-  .modal-lg { width: $modal-lg; }
-}
