--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -91,12 +91,18 @@ h1{
 .contact{
     background-color: #ccc;
     position: relative;
-    height: 307px;
     padding: 0 20px;
 }
 .contact--form {
     position: fixed;
-    bottom: 0;
+    bottom: 50px;
     left: 0;
     right: 0;
+}
+
+footer{
+    background: #ddd;
+}
+footer p{
+    margin-top: 10px;
 }
