turned off sticky/paralax on mobile contact form

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,11 +133,19 @@ h1 {
   padding: 0 20px;
 }
 
-.contact--form {
-  position: fixed;
-  bottom: 50px;
-  left: 0;
-  right: 0;
+@media all and (max-width: 480px) {
+  .contact {
+    height: auto !important;
+  }
+}
+
+@media all and (min-width: 480px) {
+  .contact--form {
+    position: fixed;
+    bottom: 50px;
+    left: 0;
+    right: 0;
+  }
 }
 
 footer {
