--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -106,12 +106,17 @@ h1{
     background-color: #ccc;
     position: relative;
     padding: 0 20px;
+    @media all and (max-width: 480px) {
+        height: auto !important;
+    }
 }
 .contact--form {
-    position: fixed;
-    bottom: 50px;
-    left: 0;
-    right: 0;
+    @media all and (min-width: 480px) {
+        position: fixed;
+        bottom: 50px;
+        left: 0;
+        right: 0; 
+    }
 }
 
 footer{
