--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -55,11 +55,12 @@ h1{
 }
 .portfolio{
     border-bottom: 1px solid #aaa;
+    overflow: hidden;
 }
 .portfolio--thumb {
     margin: 0 0 20px 0;
     opacity: 0;
-    transition: all 2s ease-out;
+    transition: all 1s ease-out;
     position: relative;
     &:nth-of-type(even){
         transform: translate(200px, 0px);
