--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,64 @@ h1 {
   }
 }
 
+.experience {
+  background-color: #ddd;
+  position: relative;
+}
+
+.experience:after {
+  content: '';
+  border-left: 1px solid #ffffff;
+  position: absolute;
+  right: 50%;
+  width: 1px;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  display: block;
+}
+
+.experience--wrapper {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: column wrap;
+  -ms-flex-flow: column wrap;
+  flex-flow: column wrap;
+  height: 300px;
+}
+
+.experience--wrapper >
+div {
+  width: 35%;
+}
+
+.experience--wrapper >
+div:nth-child(1) {
+  -webkit-order: 1;
+  -ms-flex-order: 1;
+  order: 1;
+}
+
+.experience--wrapper >
+div:nth-child(2) {
+  -webkit-order: 3;
+  -ms-flex-order: 3;
+  order: 3;
+}
+
+.experience--wrapper >
+div:nth-child(3) {
+  -webkit-order: 2;
+  -ms-flex-order: 2;
+  order: 2;
+}
+
+.experience--wrapper div .head {
+  background-color: #0000ff;
+}
+
 .portfolio {
   border-bottom: 1px solid #aaa;
   overflow: hidden;
