--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,6 @@ h1 {
 }
 
 .experience {
-  background-color: #ddd;
   position: relative;
 }
 
@@ -84,44 +83,154 @@ h1 {
   display: block;
 }
 
+.experience--bg {
+  background-color: #ccc;
+}
+
 .experience--wrapper {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-flow: column wrap;
-  -ms-flex-flow: column wrap;
-  flex-flow: column wrap;
-  height: 300px;
+  -webkit-flex-flow: column;
+  -ms-flex-flow: column;
+  flex-flow: column;
+  max-width: 960px;
+  margin: auto;
 }
 
-.experience--wrapper >
-div {
-  width: 35%;
+@media all and (min-width: 768px) {
+  .experience--wrapper {
+    height: 900px;
+    -webkit-flex-flow: column wrap;
+    -ms-flex-flow: column wrap;
+    flex-flow: column wrap;
+  }
 }
 
-.experience--wrapper >
-div:nth-child(1) {
-  -webkit-order: 1;
-  -ms-flex-order: 1;
-  order: 1;
+@media all and (min-width: 960px) {
+  .experience--wrapper {
+    height: 725px;
+  }
 }
 
-.experience--wrapper >
-div:nth-child(2) {
-  -webkit-order: 3;
-  -ms-flex-order: 3;
-  order: 3;
+.experience--wrapper .experience--card {
+  width: 100%;
+  padding: 50px 55px;
+  z-index: 2;
 }
 
-.experience--wrapper >
-div:nth-child(3) {
-  -webkit-order: 2;
-  -ms-flex-order: 2;
-  order: 2;
+@media all and (max-width: 767px) {
+  .experience--wrapper .experience--card ul {
+    list-style-type: none;
+    padding: 0;
+  }
 }
 
-.experience--wrapper div .head {
-  background-color: #0000ff;
+@media all and (min-width: 768px) {
+  .experience--wrapper .experience--card {
+    text-align: left;
+    width: 50%;
+  }
+  .experience--wrapper .experience--card:nth-child(1) {
+    -webkit-order: 1;
+    -ms-flex-order: 1;
+    order: 1;
+  }
+  .experience--wrapper .experience--card:nth-child(2) {
+    -webkit-order: 3;
+    -ms-flex-order: 3;
+    order: 3;
+    margin-top: 150px;
+  }
+  .experience--wrapper .experience--card:nth-child(3) {
+    -webkit-order: 2;
+    -ms-flex-order: 2;
+    order: 2;
+    margin-top: 50px;
+  }
+}
+
+.experience--wrapper .experience--card .head {
+  background-color: #bd1029;
+  position: relative;
+}
+
+@media all and (min-width: 768px) {
+  .experience--wrapper .experience--card .head:after {
+    content: '';
+    width: 13px;
+    height: 13px;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    background: #ccc;
+    display: block;
+    position: absolute;
+    top: 30px;
+    z-index: 10;
+    transition: all 0.5s;
+  }
+  .experience--wrapper .experience--card .head .experience--wrapper .experience--card:hover .head:after {
+    background: #bd1029;
+    border: 2px solid #bd1029;
+  }
+  .experience--wrapper .experience--card .head .experience--wrapper .experience--card:nth-child(odd) .head:after {
+    right: -61px;
+  }
+  .experience--wrapper .experience--card .head .experience--wrapper .experience--card:nth-child(even) .head:after {
+    left: -62px;
+  }
+}
+
+@media all and (min-width: 768px) {
+  .experience--wrapper .experience--card:hover .head:after {
+    background: #bd1029;
+    border: 2px solid #bd1029;
+  }
+  .experience--wrapper .experience--card:nth-child(odd) .head:after {
+    right: -61px;
+  }
+  .experience--wrapper .experience--card:nth-child(even) .head:after {
+    left: -62px;
+  }
+}
+
+.experience--wrapper .experience--card .head h3 {
+  margin: 0;
+  padding: 15px;
+  color: #fff;
+}
+
+@media all and (min-width: 768px) {
+  .experience--wrapper .experience--card .head h3:after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: 23px;
+  }
+  .experience--wrapper .experience--card:nth-child(odd) .head h3:after {
+    border-top: 13px solid transparent;
+    border-bottom: 13px solid transparent;
+    border-left: 13px solid #bd1029;
+    right: -13px;
+  }
+  .experience--wrapper .experience--card:nth-child(even) .head h3:after {
+    border-top: 13px solid transparent;
+    border-bottom: 13px solid transparent;
+    border-right: 13px solid #bd1029;
+    left: -13px;
+  }
+}
+
+.experience--wrapper .experience--card .head h3 small {
+  display: block;
+  color: #ccc;
+}
+
+.experience--wrapper .experience--card .body {
+  background: #aaa;
+  padding: 15px;
 }
 
 .portfolio {
