--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,10 @@
+$primaryColor: #bd1029;
+$experienceBGColor: #ccc;
+
+$white: #fff;
+
+$arrowSize: 13px;
+
 body{
     text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
@@ -55,40 +62,151 @@ h1{
 }
 
 .experience {
-    background-color: #ddd;
     position: relative;
+    &:after {
+        content: '';
+        border-left: 1px solid #ffffff;
+        position: absolute;
+        right: 50%;
+        width: 1px;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        display: block;
+    }
 }
 
-.experience:after {content: '';border-left: 1px solid #ffffff;position: absolute;right: 50%;width: 1px;height: 100%;top: 0;bottom: 0;margin: auto;display: block;}
+.experience--bg{
+    background-color: $experienceBGColor;
+}
 
 .experience--wrapper {
     display: flex;
-    flex-flow: column wrap;
-    height: 300px;
+    flex-flow: column;
+    max-width: 960px;
+    margin: auto;
+    @media all and (min-width: 768px) {
+        height: 900px;
+        flex-flow: column wrap;
+    }
+    @media all and (min-width: 960px) {
+        height: 725px;
+    }
 }
 
-.experience--wrapper >
- div {
-    width: 35%;
+.experience--wrapper .experience--card {
+    width: 100%;
+    padding: 50px 55px;
+    z-index: 2;
+    @media all and (max-width: 767px){
+        ul{
+            list-style-type: none;
+            padding: 0;
+        }
+    }
+    @media all and (min-width: 768px) {
+        text-align: left;
+        width: 50%;
+        &:nth-child(1) {
+            order: 1;
+        }
+
+        &:nth-child(2) {
+            order: 3;
+            margin-top: 150px;
+        }
+
+        &:nth-child(3) {
+            order: 2;
+            margin-top: 50px;
+        }
+    }
 }
 
-.experience--wrapper >
- div:nth-child(1) {
-    order: 1;
+.experience--wrapper .experience--card .head {
+    background-color: $primaryColor;
+    position: relative;
+    @media all and (min-width: 768px) {
+        &:after {
+            content: '';
+            width: 13px;
+            height: 13px;
+            border: 1px solid $white;
+            border-radius: 50%;
+            background: $experienceBGColor;
+            display: block;
+            position: absolute;
+            top: 30px;
+            z-index: 10;
+            transition: all 0.5s;
+        }
+        .experience--wrapper .experience--card:hover .head:after{
+            background: $primaryColor;
+            border: 2px solid $primaryColor;
+        }
+
+        .experience--wrapper .experience--card:nth-child(odd) .head:after {
+            right: -61px;
+        }
+        .experience--wrapper .experience--card:nth-child(even) .head:after {
+            left: -62px;
+        }
+    }
 }
 
-.experience--wrapper >
- div:nth-child(2) {
-    order: 3;
+@media all and (min-width: 768px) {
+    .experience--wrapper .experience--card:hover .head:after{
+        background: $primaryColor;
+        border: 2px solid $primaryColor;
+    }
+
+    .experience--wrapper .experience--card:nth-child(odd) .head:after {
+        right: -61px;
+    }
+    .experience--wrapper .experience--card:nth-child(even) .head:after {
+        left: -62px;
+    }
 }
 
-.experience--wrapper >
- div:nth-child(3) {
-    order: 2;
+
+.experience--wrapper .experience--card .head h3 {
+    margin: 0;
+    padding: 15px;
+    color: $white;
 }
 
-.experience--wrapper div .head {
-    background-color: #0000ff;
+@media all and (min-width: 768px) {
+    .experience--wrapper .experience--card .head h3:after {
+        content: '';
+        display: block;
+        width: 0;
+        height: 0;
+        position: absolute;
+        top: 23px;
+    }
+    .experience--wrapper .experience--card:nth-child(odd) .head h3:after {
+        border-top: $arrowSize solid transparent;
+        border-bottom: $arrowSize solid transparent;
+        border-left: $arrowSize solid $primaryColor;
+        right: -$arrowSize;
+    }
+    .experience--wrapper .experience--card:nth-child(even) .head h3:after {
+        border-top: $arrowSize solid transparent;
+        border-bottom: $arrowSize solid transparent;
+        border-right: $arrowSize solid $primaryColor;
+        left: -$arrowSize;
+    }
+}
+
+.experience--wrapper .experience--card .head h3 small {
+    display: block;
+    color: #ccc;
+}
+
+.experience--wrapper .experience--card .body {
+    background: #aaa;
+    padding: 15px;
 }
 
 
