--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,21 @@ h1 {
 
 @media all and (min-width: 480px) {
   h1 {
-    font-size: 4.375em;
+    font-size: 4em;
+    color: #fff;
+    text-shadow: 0 1px 0px #4d4946;
+  }
+}
+
+h1 small {
+  color: #2b2b2b;
+  display: block;
+}
+
+@media all and (min-width: 480px) {
+  h1 small {
+    font-size: .5em;
+    text-shadow: 0 1px 1px #717171;
   }
 }
 
@@ -22,59 +36,92 @@ h1 {
   z-index: 5;
 }
 
-.header {
-  display: none;
-}
-
 @media all and (min-width: 480px) {
-  .header {
-    background: url(../img/ron-largett-jr.jpg) no-repeat 0px -100px;
+  header {
+    background: url(../img/ron-largett-jr.jpg) no-repeat center;
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
-    height: 400px;
-    opacity: .5;
+    height: 100vh;
     position: relative;
     z-index: 0;
-    border-bottom: 1px solid #333;
     display: block;
   }
 }
 
-.portrait {
-  position: relative;
-  z-index: 1;
-  border: 10px solid #fff;
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-  border-radius: 50%;
-  display: inline-block;
-  background-color: #333;
-  background-image: url("../img/ron-largett-jr.jpg");
-  background-repeat: no-repeat;
-  background-position: -100px -30px;
-  background-size: 500px;
+@media all and (max-width: 992px) and (min-width: 480px) {
+  header .welcome {
+    position: absolute;
+    top: 50%;
+  }
+}
+
+@media all and (min-width: 992px) {
+  header .welcome {
+    padding-top: 115px;
+  }
+}
+
+header .welcome hr {
+  width: 50%;
+  border-color: #9e0d22;
+}
+
+header .welcome p {
+  font-size: 1.5em;
 }
 
 @media all and (min-width: 480px) {
+  header .welcome p {
+    color: #fff;
+    text-shadow: 0 0 2px #333;
+  }
+}
+
+header .welcome .scrollDown {
+  display: none;
+}
+
+@media all and (min-width: 480px) {
+  header .welcome .scrollDown {
+    border: 2px solid;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    background: rgba(255, 255, 255, 0.18);
+    margin-top: 50px;
+  }
+}
+
+@media all and (max-width: 480px) {
   .portrait {
-    margin-top: -100px;
-    box-shadow: 0 -1px 1px #888;
-    background-position: -140px -30px;
-    background-size: 600px;
+    position: relative;
+    z-index: 1;
+    border: 10px solid #fff;
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #333;
+    background-image: url("../img/ron-largett-jr.jpg");
+    background-repeat: no-repeat;
+    background-position: -100px -30px;
+    background-size: 500px;
   }
 }
 
 .experience {
   position: relative;
-  background-color: #bd1029;
+  background-color: #9e0d22;
   margin-bottom: 50px;
 }
 
 .experience h2 {
   padding: 10px 0 30px;
   color: #fff;
+  display: inline-block;
 }
 
 .experience--bg {
@@ -163,7 +210,7 @@ h1 {
 }
 
 .experience--wrapper .experience--card .head {
-  background-color: #bd1029;
+  background-color: #9e0d22;
   position: relative;
 }
 
@@ -185,8 +232,8 @@ h1 {
 
 @media all and (min-width: 768px) {
   .experience--wrapper .experience--card:hover .head:after {
-    background: #bd1029;
-    border: 2px solid #bd1029;
+    background: #9e0d22;
+    border: 2px solid #9e0d22;
   }
   .experience--wrapper .experience--card:nth-child(odd) .head:after {
     right: -61px;
@@ -214,13 +261,13 @@ h1 {
   .experience--wrapper .experience--card:nth-child(odd) .head h3:after {
     border-top: 13px solid transparent;
     border-bottom: 13px solid transparent;
-    border-left: 13px solid #bd1029;
+    border-left: 13px solid #9e0d22;
     right: -13px;
   }
   .experience--wrapper .experience--card:nth-child(even) .head h3:after {
     border-top: 13px solid transparent;
     border-bottom: 13px solid transparent;
-    border-right: 13px solid #bd1029;
+    border-right: 13px solid #9e0d22;
     left: -13px;
   }
 }
@@ -246,29 +293,29 @@ h1 {
   height: 40px;
   background: #fff;
   padding: 5px;
-  border: 2px solid #bd1029;
+  border: 2px solid #9e0d22;
   border-radius: 50%;
-  color: #bd1029;
+  color: #9e0d22;
   cursor: pointer;
   line-height: 1.5;
   transition: all 0.25s;
 }
 
 .experience--button.open {
-  background: #bd1029;
+  background: #9e0d22;
   color: #fff;
   border-color: #fff;
   z-index: 10;
 }
 
 .experience--button:hover {
-  background-color: #bd1029;
+  background-color: #9e0d22;
   color: white;
   border-color: white;
 }
 
 .experience--button.open:hover {
-  border-color: #bd1029;
+  border-color: #9e0d22;
 }
 
 .portfolio {
