--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,4 @@
-$primaryColor: #bd1029;
+$primaryColor: #9e0d22;
 $experienceBGColor: #ccc;
 
 $white: #fff;
@@ -16,7 +16,17 @@ h1{
     margin-top: 0;
     font-size: 10vw;
     @media all and (min-width: 480px) {
-        font-size: 4.375em;
+        font-size: 4em;
+        color: #fff;
+        text-shadow: 0 1px 0px #4d4946;
+    }
+    small{
+        color: #2b2b2b;
+        display: block;
+        @media all and (min-width: 480px) {
+            font-size: .5em;
+            text-shadow: 0 1px 1px #717171;
+        }
     }
 }
 .wrapper{
@@ -24,40 +34,65 @@ h1{
     position: relative;
     z-index: 5;
 }
-.header{
-    display: none;
+header{
     @media all and (min-width: 480px) {
-        background: url(../img/ron-largett-jr.jpg) no-repeat 0px -100px;
+        background: url(../img/ron-largett-jr.jpg) no-repeat center;
         background-size: cover;
         background-attachment: fixed;
         width: 100%;
-        height: 400px;
-        opacity: .5;
+        height: 100vh;
         position: relative;
         z-index: 0;
-        border-bottom: 1px solid #333;
-        display: block;   
+        display: block;  
+    }
+    .welcome {
+        @media all and (max-width: 992px) and (min-width: 480px) {
+            position: absolute;
+            top: 50%;
+        }
+        @media all and (min-width: 992px) {
+            padding-top: 115px;
+        }
+        hr{
+            width: 50%;
+            border-color: $primaryColor;
+        }
+        p {
+            font-size: 1.5em;
+            @media all and (min-width: 480px) {
+                color: #fff;
+                text-shadow: 0 0 2px #333;
+            }
+        }
+        .scrollDown{
+            display: none;
+            @media all and (min-width: 480px) {
+                border: 2px solid;
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                display: inline-block;
+                background: rgba(255, 255, 255, 0.18);
+                margin-top: 50px;
+            }
+        }
     }
 }
 .portrait{
-    position: relative;
-    z-index: 1;
-    border: 10px solid #fff;
-    width: 200px;
-    height: 200px;
-    overflow: hidden;
-    border-radius: 50%;
-    display: inline-block;
-    background-color: #333;
-    background-image: url('../img/ron-largett-jr.jpg');
-    background-repeat: no-repeat;
-    background-position:  -100px -30px;
-    background-size: 500px;
-    @media all and (min-width: 480px) {
-        margin-top: -100px;
-        box-shadow: 0 -1px 1px #888;
-        background-position:  -140px -30px;
-        background-size: 600px;
+    @media all and (max-width: 480px) {
+        position: relative;
+        z-index: 1;
+        border: 10px solid #fff;
+        width: 200px;
+        height: 200px;
+        overflow: hidden;
+        border-radius: 50%;
+        display: inline-block;
+        background-color: #333;
+        background-image: url('../img/ron-largett-jr.jpg');
+        background-repeat: no-repeat;
+        background-position:  -100px -30px;
+        background-size: 500px;
     }
 }
 
@@ -70,6 +105,7 @@ h1{
 .experience h2 {
     padding: 10px 0 30px;
     color: #fff;
+    display: inline-block;
 }
 
 .experience--bg{
