added parallaxjs effect on header image
added parallax effect on header image to respond to mouse movement

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ header {
     position: relative;
     z-index: 0;
     display: block;
+    overflow: hidden;
   }
 }
 
@@ -82,6 +83,10 @@ header {
   header {
     height: 375px;
   }
+}
+
+header .welcome {
+  z-index: 1;
 }
 
 @media all and (max-width: 768px) and (min-width: 480px) {
@@ -133,6 +138,26 @@ header .welcome .scrollDown {
     display: inline-block;
     background: rgba(255, 255, 255, 0.18);
     margin-top: 50px;
+  }
+}
+
+@media all and (min-width: 480px) {
+  header .layer:nth-child(2) {
+    z-index: 0;
+    width: 110%;
+    height: 100vh;
+  }
+  header .layer:nth-child(2) .sceneBg {
+    background-image: url(../img/ron-largett-jr.jpg);
+    background-size: cover;
+    position: absolute;
+    width: 110%;
+    height: 110%;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
   }
 }
 
