--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -44,6 +44,7 @@ header{
         position: relative;
         z-index: 0;
         display: block;  
+        overflow: hidden;
     }
     /** fix height for mobile devices that don't like the vh height measurement **/
     /** iPad with portrait orientation. **/
@@ -67,6 +68,7 @@ header{
     }
 
     .welcome {
+        z-index: 1;
         @media all and (max-width: 768px) and (min-width: 480px) {
             margin-top: 30px;
             display: inline-block;
@@ -99,6 +101,24 @@ header{
                 display: inline-block;
                 background: rgba(255, 255, 255, 0.18);
                 margin-top: 50px;
+            }
+        }
+    }
+    .layer:nth-child(2){
+        @media all and (min-width: 480px) {
+            z-index: 0;
+            width: 110%;
+            height: 100vh;
+            .sceneBg{
+                background-image: url(../img/ron-largett-jr.jpg);
+                background-size: cover;
+                position: absolute;
+                width: 110%;
+                height: 110%;
+                top: 50%;
+                left: 50%;
+                -webkit-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
             }
         }
     }
