--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -212,6 +212,11 @@ header{
             order: 2;
             margin-top: 50px;
         }
+
+        &:nth-child(4) {
+            order: 4;
+            margin-top: 50px;
+        }
     }
 }
 
