update height and spacing of experience section

--- a/css/styles.css
+++ b/css/styles.css
@@ -223,7 +223,7 @@ header .welcome .scrollDown {
 
 @media all and (min-width: 768px) {
   .experience--wrapper {
-    height: 900px;
+    height: 1200px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-flow: column wrap;
@@ -233,7 +233,7 @@ header .welcome .scrollDown {
 
 @media all and (min-width: 960px) {
   .experience--wrapper {
-    height: 725px;
+    height: 900px;
   }
 }
 
@@ -276,7 +276,7 @@ header .welcome .scrollDown {
     -webkit-box-ordinal-group: 3;
     -ms-flex-order: 2;
     order: 2;
-    margin-top: 50px;
+    margin-top: 0;
   }
   .experience--wrapper .experience--card:nth-child(4) {
     -webkit-box-ordinal-group: 5;
