--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -176,11 +176,11 @@ header{
     max-width: 960px;
     margin: auto;
     @media all and (min-width: 768px) {
-        height: 900px;
+        height: 1200px;
         flex-flow: column wrap;
     }
     @media all and (min-width: 960px) {
-        height: 725px;
+        height: 900px;
     }
 }
 
@@ -210,7 +210,7 @@ header{
 
         &:nth-child(3) {
             order: 2;
-            margin-top: 50px;
+            margin-top: 0;
         }
 
         &:nth-child(4) {
