--- a/css/styles.css
+++ b/css/styles.css
@@ -462,6 +462,17 @@ header .welcome .scrollDown {
   margin: 0;
 }
 
+.project--img--mobile {
+  max-width: 414px;
+  width: 100%;
+  border: 1px solid #eee;
+  margin: 0 auto;
+}
+
+.modal-header {
+  background-color: #f5f5f5;
+}
+
 .modal-body h3 {
   margin: 50px 0;
 }
